--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/qrcode": "^1.4.1",
     "@types/superagent": "^4.1.12",
     "@walletconnect/web3-provider": "^1.4.1",
+    "aos": "^2.3.4",
     "ethers": "^5.0.32",
     "klip-sdk": "^2.0.1",
     "less": "^4.1.1",
@@ -20,6 +21,7 @@
     "web3": "^1.3.6"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "assert": "^2.0.0",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^5.2.1",
