--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "ethers": "^5.0.32",
     "klip-sdk": "^2.0.1",
     "less": "^4.1.1",
+    "marked": "^3.0.4",
     "qrcode": "^1.4.4",
     "skydapp-browser": "^0.0.3",
     "skydapp-common": "^0.0.3",
     "superagent": "^6.1.0",
-    "web3": "^1.3.6"
+    "web3": "^1.3.6",
+    "xss": "^1.0.13"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
+    "@types/marked": "^3.0.1",
     "assert": "^2.0.0",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^5.2.1",
