--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "chart.js": "^3.5.1",
     "dayjs": "^1.11.3",
     "ethers": "^5.0.32",
+    "keccak256": "^1.0.6",
     "klip-sdk": "^2.0.1",
     "less": "^4.1.1",
     "marked": "^3.0.4",
+    "merkletreejs": "^0.2.32",
     "qrcode": "^1.4.4",
     "skydapp-browser": "^0.0.3",
     "skydapp-common": "^0.0.3",
